--- a/peer-assesment-tool/.env.example
+++ b/peer-assesment-tool/.env.example
@@ -28,7 +28,7 @@ DB_DATABASE=peer_assesment_tool
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file #veranderen wanneer databank is aangemaakt
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
