--- a/peer-assesment-tool/.env.example
+++ b/peer-assesment-tool/.env.example
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dutGnZ1rl8XtrRCwTrMMzAtb6qqe1WFA+vJXA9RT6Xo=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://pat-odisee.dakkar.be
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ID439999_PeerAssessmentT.db.webhosting.be
 DB_PORT=3306
-DB_DATABASE=peer_assesment_tool
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ID439999_PeerAssessmentT
+DB_USERNAME=ID439999_PeerAssessmentT
+DB_PASSWORD=GTp6XQ!5ZfSFtK8
 
 SESSION_DRIVER=file #veranderen wanneer databank is aangemaakt
 SESSION_LIFETIME=120
