login en models

--- a/peer-assesment-tool/package.json
+++ b/peer-assesment-tool/package.json
@@ -17,6 +17,7 @@
         "vite": "^6.1.0"
     },
     "dependencies": {
+        "bootstrap": "^5.3.3",
         "pako": "^2.1.0",
         "papaparse": "^5.5.2",
         "xlsx": "^0.18.5"
