--- a/peer-assesment-tool/.env.example
+++ b/peer-assesment-tool/.env.example
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=ID439999_PeerAssessmentT.db.webhosting.be
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ID439999_PeerAssessmentT
-DB_USERNAME=ID439999_PeerAssessmentT
-DB_PASSWORD=GTp6XQ!5ZfSFtK8
+DB_DATABASE=pat_db
+DB_USERNAME=yr_username
+DB_PASSWORD=yr_password
 
 SESSION_DRIVER=file #veranderen wanneer databank is aangemaakt
 SESSION_LIFETIME=120
