--- a/peer-assesment-tool/.env.example
+++ b/peer-assesment-tool/.env.example
@@ -28,7 +28,7 @@ DB_DATABASE=pat_db
 DB_USERNAME=yr_username
 DB_PASSWORD=yr_password
 
-SESSION_DRIVER=file #veranderen wanneer databank is aangemaakt
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -38,7 +38,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
